--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h4 {
   margin-bottom: 30px;
 }  
 .jumbotron {
-  background-color: #823A8C;
+  background-color: #303030;
   color: #fff;
   padding: 100px 25px;
   font-family: Montserrat, sans-serif;
@@ -30,11 +30,11 @@ h4 {
   background-color: #f6f6f6;
 }
 .logo-small {
-  color: #823A8C;
+  color: #f4511e;
   font-size: 50px;
 }
 .logo {
-  color: #823A8C;
+  color: #f4511e;
   font-size: 200px;
 }
 .thumbnail {
@@ -49,13 +49,13 @@ h4 {
 }
 .carousel-control.right, .carousel-control.left {
   background-image: none;
-  color: #823A8C;
+  color: #f4511e;
 }
 .carousel-indicators li {
-  border-color: #823A8C;
+  border-color: #f4511e;
 }
 .carousel-indicators li.active {
-  background-color: #823A8C;
+  background-color: #f4511e;
 }
 .item h4 {
   font-size: 19px;
@@ -68,7 +68,7 @@ h4 {
   font-style: normal;
 }
 .panel {
-  border: 1px solid #823A8C; 
+  border: 1px solid #f4511e; 
   border-radius:0 !important;
   transition: box-shadow 0.5s;
 }
@@ -76,13 +76,13 @@ h4 {
   box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 .panel-footer .btn:hover {
-  border: 1px solid #823A8C;
+  border: 1px solid #f4511e;
   background-color: #fff !important;
-  color: #823A8C;
+  color: #f4511e;
 }
 .panel-heading {
   color: #fff !important;
-  background-color: #823A8C !important;
+  background-color: #f4511e !important;
   padding: 25px;
   border-bottom: 1px solid transparent;
   border-top-left-radius: 0px;
@@ -102,12 +102,12 @@ h4 {
 }
 .panel-footer .btn {
   margin: 15px 0;
-  background-color: #823A8C;
+  background-color: #f4511e;
   color: #fff;
 }
 .navbar {
   margin-bottom: 0;
-  background-color: #823A8C;
+  background-color: #f4511e;
   z-index: 9999;
   border: 0;
   font-size: 12px !important;
@@ -120,7 +120,7 @@ h4 {
   color: #fff !important;
 }
 .navbar-nav li a:hover, .navbar-nav li.active a {
-  color: #823A8C !important;
+  color: #f4511e !important;
   background-color: #fff !important;
 }
 .navbar-default .navbar-toggle {
@@ -130,7 +130,7 @@ h4 {
 footer .glyphicon {
   font-size: 20px;
   margin-bottom: 20px;
-  color: #823A8C;
+  color: #f4511e;
 }
 .slideanim {visibility:hidden;}
 .slide {
